<resources>
    <string name="app_name">CARDB</string>
    <string name="login_option">Login</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="login">Login</string>
    <string name="edit">Edit Value</string>
    <string name="cancel">Annulla</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="veicolo_targa_tag">Targa:\u0020</string>
    <string name="veicolo_proprietario_tag">Proprietario:\u0020</string>
    <string name="veicolo_telaio_tag">N. Telaio:\u0020</string>
    <string name="veicolo_modello_marca_tag">Marca:\u0020</string>
    <string name="veicolo_modello_nome_tag">Modello:\u0020</string>
    <string name="veicolo_modello_anno_tag">Anno modello:\u0020</string>

    <string name="cliente_nome_tag">Nome:\u0020</string>
    <string name="cliente_cognome_tag">Cognome:\u0020</string>
    <string name="cliente_cf_tag">CF:\u0020</string>
    <string name="cliente_telefono_tag">Telefono:\u0020</string>
    <string name="cliente_piva_tag">IVA:\u0020</string>
    <string name="cliente_indirizzo_tag">Indirizzo:\u0020</string>
    <string name= "cliente_civico_tag">N°:\u0020</string>
    <string name="cliente_citta_tag">Città:\u0020</string>
    <string name="cliente_provincia_tag">Provincia:\u0020</string>

    <string name="lavoro_start_tag">Inizio:\u0020</string>
    <string name="lavoro_end_tag">Fine:\u0020</string>
    <string name="lavoro_fattura_tag">\u0020\u0020Fattura\u0020\u0020</string>
    <string name="lavoro_not_ended_tag">\u0020\u0020Fine\u0020\u0020</string>

    <string name="id_tag">Id:\u0020</string>
    <string name="end_work">Lavoro finito, settare fattura:</string>
    <string name="add_new">Crea Fattura</string>
    <string name="add_to">Fattura esistente</string>
    <string name="add">Aggiungi</string>
    <string name="salva">Salva</string>
    <string name="not_finished">Lavoro non finito</string>
    <string name="descrizioni_tipo_tag">Tipo:\u0020</string>
    <string name="descrizioni_tag">Descrizione:\u0020</string>
    <string name="pagamenti_pagato_tag">Pagato\u0020</string>
    <string name="pagamenti_Cliente_tag">Cliente:\u0020</string>

    <string name="data_tag">Data:\u0020</string>

    <string name="spinner">Edit Value</string>
    <string name="magazzino_num_tag">Quantità:\u0020</string>
    <string name="magazzino_vendita_tag">Prezzo:\u0020</string>
    <string name="ordine_fornitore_tag">Fornitore:\u0020</string>
    <string name="edificio_tip_tag">Tipologia:\u0020</string>
    <string name="edificio_resp_id_tag">Resp.:\u0020</string>
    <string name="edificio_resp_tag">Nome:\u0020</string>
    <string name="personale_contratto_tag">Contratto:\u0020</string>
    <string name="iban_tag">Iban:\u0020</string>
    <string name="responsabile_edificio_tag">Edificio:\u0020</string>
    <string name="personale_resp_tag">Responsabile\u0020</string>
    <string name="agg_lav">Aggiungi Lavoro</string>

    <string name="query">Strumento per Query</string>
</resources>


