<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_ins_per"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Nuovo dipendente:"
        android:textSize="28sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/primaryColor" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_nome_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_nome_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_nome_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_cognome_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_cognome_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_cognome_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_cf_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_cf_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_cf_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_telefono_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_telefono_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_telefono_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_iban_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iban_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_iban_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_contratto_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personale_contratto_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_contratto_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_citta_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_citta_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_citta_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_provincia_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_provincia_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_provincia_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_indirizzo_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_indirizzo_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_indirizzo_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_civico_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente_civico_tag"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/personale_civico_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personale_edificio_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responsabile_edificio_tag"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/personale_edificio_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_edificio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agg. Edificio"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>



    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/primaryColor" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/edit_view1"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/primaryColor"
            android:layout="@+id/sep1" />

        <Button
            android:id="@+id/edit_ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/edit_view1"
            android:background="@null"
            android:text="@string/salva" />

        <Button
            android:id="@+id/edit_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/edit_view1"
            android:background="@null"
            android:text="@string/cancel" />

    </RelativeLayout>
</LinearLayout>