<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/end_work"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/primaryColor" />

    <Spinner
        android:id="@+id/spinner_fatture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown">

    </Spinner>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1">


        <View
            android:id="@+id/view2"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/primaryColor"
            android:layout="@+id/sep1" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/view2"
            android:layout_weight="0.5"
            android:background="@null"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/view1"
            android:layout_toRightOf="@id/view2"
            android:layout_weight="0.5"
            android:background="@null"
            android:text="@string/add" />


    </LinearLayout>

</LinearLayout>