<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/veicolo_targa_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veicolo_targa_tag"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/veicolo_targa_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/veicolo_proprietario_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veicolo_proprietario_tag"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/veicolo_proprietario_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/veicolo_telaio_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veicolo_telaio_tag"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/veicolo_telaio_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/veicolo_modello_marca_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veicolo_modello_marca_tag"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/veicolo_modello_marca_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/veicolo_modello_nome_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veicolo_modello_nome_tag"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/veicolo_modello_nome_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/veicolo_modello_anno_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veicolo_modello_anno_tag"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/veicolo_modello_anno_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@drawable/shadow_top_to_bottom" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true" />

</LinearLayout>